Work in progress: NLI model and protobuf fixes

--- a/notebooks/reading_data.ipynb
+++ b/notebooks/reading_data.ipynb
@@ -28,10 +28,7 @@
      ]
     }
    ],
-   "source": [
-    "# Cài đặt pandas nếu chưa có\n",
-    "!pip install pandas"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -46,11 +43,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fbf39e19",
+   "execution_count": 3,
+   "id": "5b2cfe82",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\NguyenTienDat_23520262\\Nam 3\\DS_competition\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
+      "Some weights of the model checkpoint at roberta-large-mnli were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of the model checkpoint at roberta-large-mnli were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\NguyenTienDat_23520262\\Nam 3\\DS_competition\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
+      "Some weights of the model checkpoint at roberta-large-mnli were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of the model checkpoint at roberta-large-mnli were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTRADICTION tensor([[0.5364, 0.2889, 0.1747]], grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "import torch\n",
+    "\n",
+    "# Load tokenizer và model\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"roberta-large-mnli\")\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\"roberta-large-mnli\")\n",
+    "\n",
+    "premise = \"Một người đàn ông đang chơi guitar.\"\n",
+    "hypothesis = \"Không ai đang chơi nhạc cụ.\"\n",
+    "\n",
+    "# Encode dữ liệu\n",
+    "inputs = tokenizer(premise, hypothesis, return_tensors=\"pt\")\n",
+    "\n",
+    "# Dự đoán\n",
+    "outputs = model(**inputs)\n",
+    "logits = outputs.logits\n",
+    "probs = torch.softmax(logits, dim=-1)\n",
+    "\n",
+    "# Nhãn của MNLI: 0=CONTRADICTION, 1=NEUTRAL, 2=ENTAILMENT\n",
+    "labels = [\"CONTRADICTION\", \"NEUTRAL\", \"ENTAILMENT\"]\n",
+    "\n",
+    "pred = labels[torch.argmax(probs)]\n",
+    "print(pred, probs)"
+   ]
   }
  ],
  "metadata": {
